JumpScript/tests/baselines/reference/jmpxUnionTypeComponent2.errors.txt
tests/cases/conformance/jsx/file.jmpx(7,2): error TS2604: JSX element type 'X' does not have any construct or call signatures.


==== tests/cases/conformance/jsx/file.jmpx (1 errors) ====
    import React = require('react');
    
    type Invalid1 = React.ComponentClass<any> | number;
    
    const X: Invalid1 = 1;
    
    <X />;
     ~
!!! error TS2604: JSX element type 'X' does not have any construct or call signatures.
    
    
    